@@ -1,7 +1,7 @@
 #/*! \page config_rpmrc Default configuration: /usr/lib/rpm/rpmrc
 # \verbatim
 #
-# $Id: rpmrc.in,v 2.36 2001/05/11 17:18:16 jbj Exp $
+# $Id: rpmrc.in,v 2.37 2001/05/16 19:19:15 jbj Exp $
 #
 # This is a global RPM configuration file. All changes made here will
 # be lost when the rpm package is upgraded. Any per-system configuration
@@ -40,8 +40,9 @@ optflags: hppa1.2 -O2 -mpa-risc-1-0
 optflags: hppa2.0 -O2 -mpa-risc-1-0
 optflags: mipseb -O2
 optflags: mipsel -O2
-optflags: armv4b -O2 -fsigned-char -fomit-frame-pointer
-optflags: armv4l -O2 -fsigned-char -fomit-frame-pointer
+optflags: armv3l -O2 -fsigned-char -fomit-frame-pointer -march=armv3
+optflags: armv4b -O2 -fsigned-char -fomit-frame-pointer -march=armv4
+optflags: armv4l -O2 -fsigned-char -fomit-frame-pointer -march=armv4
 optflags: atarist -O2 -fomit-frame-pointer
 optflags: atariste -O2 -fomit-frame-pointer
 optflags: ataritt -O2 -fomit-frame-pointer
@@ -82,6 +83,7 @@ arch_canon:	sparc64:sparc64 10
 arch_canon:	sun4u:	sparc64 10
 arch_canon:	mipsel:	mipsel	11
 
+arch_canon:	armv3l: armv3l	12
 arch_canon:     armv4b:	armv4b 	12
 arch_canon:     armv4l:	armv4l 	12
 
@@ -211,7 +213,8 @@ arch_compat: hppa1.0: parisc
 arch_compat: parisc: noarch
 
 arch_compat: armv4b: noarch
-arch_compat: armv4l: noarch
+arch_compat: armv4l: armv3l
+arch_compat: armv3l: noarch
 
 arch_compat: atarist: m68kmint noarch
 arch_compat: atariste: m68kmint noarch
@@ -280,8 +283,11 @@ buildarch_compat: m68k: noarch
 buildarch_compat: ppc: noarch
 buildarch_compat: mipsel: noarch
 buildarch_compat: mipseb: noarch
+
+buildarch_compat: armv3l: noarch
 buildarch_compat: armv4b: noarch
 buildarch_compat: armv4l: noarch
+
 buildarch_compat: parisc: noarch
 
 buildarch_compat: atarist: m68kmint noarch
